[package]
name = "pt-fuser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
flexbuffers = "25.12.19"
perfetto_rust = { path = "../perfetto_rust" }
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
