[package]
name = "pt-fuser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
eframe = "0.34.1"
egui = "0.34.1"
egui_plot = "0.35.0"
flate2 = "1.1.9"
flexbuffers = "25.12.19"
perfetto-rust = { path = "../perfetto-rust" }
prost = "0.14.3"
prost-types = "0.14.3"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
